# CppBuildInfo

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.py  licenseComment
apps/: CMakeLists.txt  client.cpp  server.cpp
apps/cbiTest/: CMakeLists.txt  main.cpp
apps/cmd/: CMakeLists.txt  main.cpp
apps/gui/: CMakeLists.txt  DataParser.cpp  DataParser.h  MainWindow.cpp  MainWindow.ui  main.cpp
apps/guiCharts/: MainWindow.cpp  MainWindow.h  chartview.cpp
apps/guiGraphicsView/: CMakeLists.txt  CompilationProcessGraphicItem.cpp  CompilationProcessGraphicItem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  mygraphicsview.cpp  mygraphicsview.h
apps/ncurses/: CMakeLists.txt  main.c
cmake/: basicSetup.cmake  buildFiles.cmake  cmake_uninstall.cmake.in  compilerDefinitions.cmake  compileroptions.cmake  findDependencies.cmake  options.cmake  printInfo.cmake  versions.cmake
cmake/ext/gtest/: CMakeLists.txt
data/: badFileWithBadTypes.txt  badFileWithLessFieldsPerLine.txt  badFileWithMoreFieldsPerLine.txt  compileSmallLibrary.txt  exiv2_gcc_linux.txt  fakeFile1.txt  fakeFile4ConcurrentCompilations.txt  fakeFile5ConcurrentCompilations.txt  fakeFile6ConcurrentCompilations.txt
lib/: CMakeLists.txt
lib/include/CppBuildInfo/: CompilationProcess.h  CompileUnit.h  CompilerParserFactory.h  DataParser.h  ICompilerParser.h  TranslationUnit.h  utils.h
lib/src/: CompilationProcess.cpp  CompilerParserFactory.cpp  DataParser.cpp  GccCompilerInterface.cpp  GccCompilerParser.cpp  GccCompilerParser.h  TranslationUnit.cpp  utils.cpp
lib/tests/: CMakeLists.txt  config.h.in  gtestWrapper.h  main.cpp
lib/tests/integration/: test_gcc_project.cpp
lib/tests/unit/: test_CompilationProcess.cpp  test_DataParser.cpp  test_utils.cpp
travis/: cmake.sh  install.sh  installCMake.sh  installConan.sh  run.sh
